--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap -->
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/bootstrap-theme.css" rel="stylesheet">
-  <!-- <link href="css/styles.css" rel="stylesheet"> -->
+  <link href="css/styles.css" rel="stylesheet">
   <!-- font-awsome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <!-- fonts -->
@@ -33,11 +33,17 @@
     </div>
 <!-- body content -->
   <div class="row">
-  	
+  	<div class="col-md-6">
+  		<p>Health Data For Decision Making</p>
+  	</div>
   </div>  
 
 
   	</div>
   </div>
+  
+  <!-- Javascript files -->
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
