three-column grid

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link href="css/styles.css" rel="stylesheet">
   <!-- font-awsome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <!-- materialize-icons -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.materialdesignicons.com/1.3.41/css/materialdesignicons.min.css">
   <!-- fonts -->
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   	<!-- JavaScript  -->
@@ -31,17 +33,50 @@
             </nav>
         </div>
     </div>
+<br>
+    <div class="container-fluid cover ">
+    	<p>HEALTH AND DISEASE DATA FOR DECISION MAKING</p>
+    </div>
 <!-- body content -->
   <div class="row">
   	<div class="col-md-6">
-  		<p>Health Data For Decision Making</p>
+  		<p>XXX is a decision making system which utilises data on various disease across<br>the counties of Kenya</p>
+  		<button type="button" class="btn btn-link">Proceed</button>
   	</div>
-  </div>  
+
+  	<div class="col-md-6">
+  		<img src="img/.png" class="">
+  	</div>
+  </div>
+
+<br>
+
+<div class="container">
+	<div class="row">
+		<!-- grid one -->
+		<div class="col-md-4">
+			<p>...</p>
+		</div>
+
+		<div class="col-md-4">
+				<p>...</p>
+		</div>
+
+		<div class="col-md-4">
+				<p>...</p>
+		</div>
+	</div>
+</div>
+
+
+
+
+
+
 
 
   	</div>
   </div>
-  
   <!-- Javascript files -->
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
