--- a/form.html
+++ b/form.html
@@ -28,6 +28,7 @@
 </div>
 <br>
 
+<div
 <form class="form-horizontal">
   <div class="form-group">
     <label for="fname" class="col-sm-2 control-label">First Name</label>
@@ -119,11 +120,7 @@
   </div>
 </form>
 
-
-
-
-
-	</div>
+</div>
 </div>
 </body>
 </html>
