--- a/form.html
+++ b/form.html
@@ -4,9 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>patient Form</title>
 <link href="css/bootstrap.css" rel="stylesheet">
-<<<<<<< HEAD
+
 <link href="css/bootstrap-theme.css" rel="stylesheet">
 <link href="css/styles.css" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
 <script src="js/jquery-1.11.3.min.js"></script>
 <script type="text/javascript" src="js/view.js"></script>
@@ -20,75 +21,6 @@
 <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
 </head>
 <body>
-  <div id="wrapper">
-    <div class="container">
-	<!-- <img id="top" src="img/top.png" alt=""> -->
-    <h1>PATIENTS DATA</h1>
-<!-- form -->
-<form class="form-horizontal" action="" name="" method="post">
-  <div class="form-group">
-    <label for="patientname" class="col-sm-2 control-label">First Name</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="inputname" placeholder="First Name" name="first_name">
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="secondname" class="col-sm-2 control-label">Second Name</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="inputsecondname" placeholder="Second Name" name="second_name">
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="inputlocation" class="col-sm-2 control-label">Disease</label>
-    <div class="col-sm-10">
-      <select class="form-control">
-        <option value="">Malaria</value>
-
-      </select
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputcounty" class="col-sm-2 control-label">County</label>
-    <div class="col-sm-10">
-      <select class="form-control">
-        <option value="">Nairobi</value>
-
-      </select
-    </div>
-  </div>
-
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Submit</button>
-    </div>
-  </div>
-=======
-  <link href="css/bootstrap-theme.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  <!-- font-awsome -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <!-- fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-  	<!-- JavaScript  -->
-  <script src="js/jquery-1.11.3.min.js"></script>
-  <script src="js/modernizr.js"></script>
-<link href="css/bootstrap-theme.css" rel="stylesheet">
-<link href="css/styles.css" rel="stylesheet">
-
- <script src="js/jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="view.js"></script>
-</head>
-<body>
 <div id="wrapper">
 	<div class="container">
 		<!-- form -->
@@ -97,7 +29,7 @@
 </div>
 <br>
 
-<div
+<div>
 <form class="form-horizontal">
   <div class="form-group">
     <label for="fname" class="col-sm-2 control-label">First Name</label>
@@ -184,25 +116,16 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn-default">Submit</button>
     </div>
   </div>
->>>>>>> 47dcbb4ef92e80434382792ff0f0087303440e68
+
 </form>
 
-<<<<<<< HEAD
-
-
-
-
-<<<<<<< HEAD
 </div>
-=======
 	</div>
->>>>>>> 47dcbb4ef92e80434382792ff0f0087303440e68
-=======
 </div>
->>>>>>> nelson
+
 </div>
 </body>
 </html>
