--- a/login.html
+++ b/login.html
@@ -30,13 +30,20 @@
 <br>
 
 <div>
+
+<!--Form-->
+
+
+<div class="Container-login">
 <form class="form-horizontal">
 <div class="form-group">
-    <label for="disease" class="col-sm-2 control-label">Disease</label>
-    <div class="col-sm-10">
-      <
-    </div>
-  </div>
+ <label for="county" class="col-sm-2 control-label">County Code</label>
+ <input type="text" class="form-control" placeholder="Code" aria-describedby="sizing-addon1">
+</div>
+
+
+
+
 
 <div class="form-group">
     <label for="county" class="col-sm-2 control-label">County</label>
@@ -99,6 +106,7 @@
   </div>
 
 </form>
+</div>
 
 </div>
 	</div>
