--- a/login.html
+++ b/login.html
@@ -33,13 +33,24 @@
 
 <!--Form-->
 
-
-<div class="Container-login">
+<fieldset>
 <form class="form-horizontal">
-<div class="form-group">
+<!--<div class="form-group">
  <label for="county" class="col-sm-2 control-label">County Code</label>
  <input type="text" class="form-control" placeholder="Code" aria-describedby="sizing-addon1">
-</div>
+</div>-->
+
+
+
+<div class="form-group">
+    <label for="county" class="col-sm-2 control-label">Code</label>
+    <div class="col-sm-10">
+      <select class="form-control">
+            <option value="">Mombasa County</option>
+            
+          </select>
+    </div>
+  </div>
 
 
 
@@ -106,7 +117,7 @@
   </div>
 
 </form>
-</div>
+</fieldset>
 
 </div>
 	</div>
