--- a/login.html
+++ b/login.html
@@ -20,7 +20,8 @@
 <!-- AngularFire -->
 <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
 </head>
-<body>
+
+<body "img/lit.jpg">
 <div id="wrapper">
 	<div class="container">
 		<!-- form -->
@@ -34,21 +35,13 @@
 <!--Form-->
 
 <fieldset>
+<h1><b>Scrum</b></h1>
+<div class="container-form">
 <form class="form-horizontal">
-<!--<div class="form-group">
- <label for="county" class="col-sm-2 control-label">County Code</label>
- <input type="text" class="form-control" placeholder="Code" aria-describedby="sizing-addon1">
-</div>-->
-
-
-
 <div class="form-group">
-    <label for="county" class="col-sm-2 control-label">Code</label>
+    <label for="county" class="col-sm-2 control-label"><p>Code</p></label>
     <div class="col-sm-10">
-      <select class="form-control">
-            <option value="">Mombasa County</option>
-            
-          </select>
+      <input class="form-control" id="" name="" type="text" placeholder="Code">
     </div>
   </div>
 
@@ -57,7 +50,7 @@
 
 
 <div class="form-group">
-    <label for="county" class="col-sm-2 control-label">County</label>
+    <label for="county" class="col-sm-2 control-label"><p>County</p></label>
     <div class="col-sm-10">
       <select class="form-control">
           	<option value="">Mombasa County</option>
@@ -117,6 +110,7 @@
   </div>
 
 </form>
+</div>
 </fieldset>
 
 </div>
