styling user.html

--- a/user.html
+++ b/user.html
@@ -24,11 +24,14 @@
 <div id="wrapper">
 	<div class="container">
 		<!-- form -->
-<div>		
+<div>
 		<p>INPUT PATIENT DETAILS</p>
 </div>
 
+<fieldset>
+<h2><b>Enter Patient Details</b></h2>
 <form class="form-horizontal">
+<div class="container-form">
 <div class="form-group">
     <label for="disease" class="col-sm-2 control-label">Gender</label>
     <div class="col-sm-10">
@@ -64,8 +67,8 @@
   </div>
 
 </form>
-
+</fieldset>
 </div>
-	</div>
+</div>
 </body>
 </html>
