--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
 <!--Form-->
 
 <fieldset>
-<h1><b>Scrum</b></h1>
+<h2><b>Login Form</b></h2>
 <div class="container-form">
 <form class="form-horizontal">
 <div class="form-group">
@@ -117,6 +117,5 @@
 	</div>
 </div>
 
-</div>
 </body>
 </html>
