--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="js/jquery-1.11.3.min.js"></script>
   <script src="js/modernizr.js"></script>
 </head>
-<body background="img/bac.jpg">
+<body >
   <div id="wrapper">
   	<div class="container">
   	<!-- navbar -->
