--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
 </head>
 
-<body "img/lit.jpg">
+<body background color="#01579B">
 <div id="wrapper">
 	<div class="container">
 		<!-- form -->
