background image for landing page

--- a/index.html
+++ b/index.html
@@ -19,9 +19,22 @@
   	<!-- JavaScript  -->
   <script src="js/jquery-1.11.3.min.js"></script>
   <script src="js/modernizr.js"></script>
+
+<style>
+body {  background-image: url("img/kena.png");
+         background-size: 1200px 1500px; }
+
+h1   {color:blue;}
+p    {color:green;}
+</style>
+
+
+
 </head>
-<body >
-  <div id="wrapper">
+
+
+<body>
+ <div id="wrapper">
   	<div class="container">
   	<!-- navbar -->
   		    <div class="masthead clearfix">
@@ -30,6 +43,10 @@
             <nav>
                 <ul class="nav masthead-nav">
                     <li class="active"><a href="#about">About</a></li>
+                    <li><a href="default.asp">Data</a></li>
+                    <li><a href="news.asp">News</a></li>
+                    <li><a href="contact.asp">Contact</a></li>
+                  
                 </ul>
             </nav>
         </div>
@@ -38,6 +55,7 @@
     <div class="container-fluid cover ">
     	<p>HEALTH AND DISEASE DATA FOR DECISION MAKING</p>
     </div>
+
 <!-- body content -->
   <div class="row">
   	<div class="col-md-6">
