--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>patient Form</title>
+<title>Open Data|Disease Data</title>
 <link href="css/bootstrap.css" rel="stylesheet">
 
 <link href="css/bootstrap-theme.css" rel="stylesheet">
